[workspace]
resolver = "2"
members = [
    "shared",
    "clocks/01_precision_instrument",
    "clocks/02_worldline_ribbon",
    "clocks/03_temporal_topography",
    "clocks/04_chrono_superposition",
    "clocks/05_ritual_clock",
    "clocks/06_audit_ledger",
    "clocks/07_temporal_grammar",
]

[workspace.dependencies]
nannou = "0.19"
nannou_egui = "0.19"
chrono = "0.4"
chrono-tz = "0.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"

